// Copyright 2015 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
syntax = "proto2";
option optimize_for = LITE_RUNTIME;

package soma;

message ContainerSpec {
  optional string service_bundle_path = 1;
  optional uint32 uid = 2;
  optional uint32 gid = 3;

  // NB: When adding a value here, add it to namespace.h as well.
  enum Namespace {
    NEWIPC = 0;
    NEWNET = 1;
    NEWNS = 2;
    NEWPID = 3;
    NEWUSER = 4;
    NEWUTS = 5;
  }

  repeated Namespace namespaces = 4;  // Namespaces to unshare for the service.

  message PortSpec {
    optional bool allow_all = 1 [default = false];
    repeated uint32 ports = 2;
  }
  optional PortSpec listen_ports = 5;  // Ports allowed for listening.

  message DevicePathFilter {
    optional string filter = 1;
  }

  message DeviceNodeFilter {
    optional int32 major = 1;
    optional int32 minor = 2;
  }

  repeated DevicePathFilter device_path_filters = 6;
  repeated DeviceNodeFilter device_node_filters = 7;
}
